@@ -4,15 +4,22 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import dev.aziz.movies.dtos.MovieDto;
 import dev.aziz.movies.dtos.ReducedMovieDto;
 import dev.aziz.movies.dtos.UpdateMovieDto;
+import dev.aziz.movies.entities.Actor;
+import dev.aziz.movies.entities.Director;
+import dev.aziz.movies.entities.Genre;
+import dev.aziz.movies.entities.Movie;
+import dev.aziz.movies.mappers.MovieMapper;
 import dev.aziz.movies.services.MovieService;
 import org.junit.jupiter.api.Test;
+import org.mapstruct.factory.Mappers;
+import org.mockito.Spy;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.ArrayList;
+import java.time.Instant;
 import java.util.Arrays;
 import java.util.List;
 
@@ -30,7 +37,10 @@ class MovieControllerTest {
     @MockBean
     public MovieService movieService;
 
-    private ObjectMapper objectMapper = new ObjectMapper();
+    @Autowired
+    public ObjectMapper objectMapper;
+
+    private static MovieMapper movieMapper = Mappers.getMapper(MovieMapper.class);
 
     @Test
     void getMoviesTest() throws Exception {
@@ -50,39 +60,39 @@ class MovieControllerTest {
                 .andExpect(jsonPath("$[0].title").value("Titanic"))
                 .andExpect(jsonPath("$[1].title").value("The Shawshank Redemption"))
                 .andExpect(jsonPath("$[2].title").value("The Godfather"))
-                .andExpect(jsonPath("$[0].year").value(1997))
-                .andExpect(jsonPath("$[1].year").value(1994))
-                .andExpect(jsonPath("$[2].year").value(1972));
+                .andExpect(jsonPath("$[0].producedYear").value(1997))
+                .andExpect(jsonPath("$[1].producedYear").value(1994))
+                .andExpect(jsonPath("$[2].producedYear").value(1972));
     }
 
     @Test
     void getMovieTest() throws Exception {
         //given
-        List<MovieDto> movieDtoList = List.of(
-                new MovieDto(1L, "Titanic", "A seventeen-year-old aristocrat falls in love with a kind but poor artist aboard the luxurious, ill-fated R.M.S. Titanic.", 1997, 5, "James Cameron", List.of("Leonardo DiCaprio", "Kate Winslet", "Billy Zane", "Kathy Bates", "Frances Fisher"), "Drama"),
-                new MovieDto(2L, "The Shawshank Redemption", "Over the course of several years, two convicts form a friendship, seeking consolation and, eventually, redemption through basic compassion.", 1994, 4, "Frank Darabont", List.of("Tim Robbins", "Morgan Freeman", "Bob Gunton", "William Sandler", "Clancy Brown"), "Drama"),
-                new MovieDto(3L, "The Godfather", "Don Vito Corleone, head of a mafia family, decides to hand over his empire to his youngest son Michael. However, his decision unintentionally puts the lives of his loved ones in grave danger.", 1972, 3, "Francis Ford Coppola", List.of("Marlon Brando", "Al Pacino", "James Caan", "Richard S. Castellano", "Robert Duvall"), "Crime")
+        List<Movie> movieList = Arrays.asList(
+                new Movie(1L, "Titanic", "TEST A seventeen-year-old aristocrat falls in love with a kind but poor artist aboard the luxurious, ill-fated R.M.S. Titanic.", 1997, 5, List.of(new Director(1L, "James", "Cameron")), Arrays.asList(new Actor(1L, "Leonardo", "DiCaprio"), new Actor(2L, "Kate", "Winslet"), new Actor(3L, "Billy", "Zane"), new Actor(4L, "Kathy", "Bates"), new Actor(5L, "Frances", "Fisher")), List.of(new Genre(1L, "Drama")), Instant.now(), Instant.now()),
+                new Movie(2L, "The Shawshank Redemption", "Over the course of several years, two convicts form a friendship, seeking consolation and, eventually, redemption through basic compassion.", 1994, 4, List.of(new Director(2L, "Frank", "Darabont")), Arrays.asList(new Actor(6L, "Tim", "Robbins"), new Actor(7L, "Morgan", "Freeman"), new Actor(8L, "Bob", "Gunton"), new Actor(9L, "William", "Sandler"), new Actor(10L, "Clancy", "Brown")), List.of(new Genre(1L, "Drama")), Instant.now(), Instant.now()),
+                new Movie(3L, "The Godfather", "Don Vito Corleone, head of a mafia family, decides to hand over his empire to his youngest son Michael. However, his decision unintentionally puts the lives of his loved ones in grave danger.", 1972, 3, List.of(new Director(3L, "Francis", "Coppola")), Arrays.asList(new Actor(11L, "Marlon", "Brando"), new Actor(12L, "Al", "Pacino"), new Actor(13L, "James", "Caan"), new Actor(14L, "Richard", "Castellano"), new Actor(15L, "Robert", "Duvall")), List.of(new Genre(3L, "Crime")), Instant.now(), Instant.now())
         );
         //when
-        when(movieService.findMovieById(1L)).thenReturn(movieDtoList.get(0));
+        when(movieService.findMovieById(1L)).thenReturn(movieMapper.movieToMovieDto(movieList.get(0)));
         //then
         mockMvc.perform(get("/movies/1"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.title").value("Titanic"))
-                .andExpect(jsonPath("$.year").value("1997"))
-                .andExpect(jsonPath("$.genre").value("Drama"))
-                .andExpect(jsonPath("$.director").value("James Cameron"));
+                .andExpect(jsonPath("$.producedYear").value("1997"))
+                .andExpect(jsonPath("$.genres[0].name").value("Drama"))
+                .andExpect(jsonPath("$.director[0].firstName").value("James"));
     }
 
     @Test
     void createMovie() throws Exception {
         //given
-        MovieDto movie = new MovieDto(4L, "The Dark Knight", "When the menace known as the Joker wreaks havoc and chaos on the people of Gotham, Batman must accept one of the greatest psychological and physical tests of his ability to fight injustice.", 2008, 5, "Christopher Nolan", List.of("Christian Bale", "Heat Ledger", "Aaron Eckhart", "Michael Caine", "Cillian Murphy"), "Action");
+        Movie movie = new Movie(4L, "The Dark Knight", "DARK KNIGHT TEST A seventeen-year-old aristocrat falls in love with a kind but poor artist aboard the luxurious, ill-fated R.M.S. Titanic.", 1997, 5, List.of(new Director(1L, "James", "Cameron")), Arrays.asList(new Actor(1L, "Leonardo", "DiCaprio"), new Actor(2L, "Kate", "Winslet"), new Actor(3L, "Billy", "Zane"), new Actor(4L, "Kathy", "Bates"), new Actor(5L, "Frances", "Fisher")), List.of(new Genre(1L, "Drama")), Instant.now(), Instant.now());
 
         String movieJson = objectMapper.writeValueAsString(movie);
 
         //when
-        when(movieService.createMovie(movie)).thenReturn(movie);
+        when(movieService.createMovie(movieMapper.movieToMovieDto(movie))).thenReturn(movieMapper.movieToMovieDto(movie));
 
         //then
         mockMvc.perform(post("/movies")
@@ -91,36 +101,36 @@ class MovieControllerTest {
                         .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.title").value("The Dark Knight"))
-                .andExpect(jsonPath("$.director").value("Christopher Nolan"));
+                .andExpect(jsonPath("$.producedYear").value(1997));
 
     }
 
     @Test
     void deleteMovie() throws Exception {
         //given
-        List<MovieDto> movieDtoList = List.of(
-                new MovieDto(1L, "Titanic", "A seventeen-year-old aristocrat falls in love with a kind but poor artist aboard the luxurious, ill-fated R.M.S. Titanic.", 1997, 5, "James Cameron", List.of("Leonardo DiCaprio", "Kate Winslet", "Billy Zane", "Kathy Bates", "Frances Fisher"), "Drama"),
-                new MovieDto(2L, "The Shawshank Redemption", "Over the course of several years, two convicts form a friendship, seeking consolation and, eventually, redemption through basic compassion.", 1994, 4, "Frank Darabont", List.of("Tim Robbins", "Morgan Freeman", "Bob Gunton", "William Sandler", "Clancy Brown"), "Drama"),
-                new MovieDto(3L, "The Godfather", "Don Vito Corleone, head of a mafia family, decides to hand over his empire to his youngest son Michael. However, his decision unintentionally puts the lives of his loved ones in grave danger.", 1972, 3, "Francis Ford Coppola", List.of("Marlon Brando", "Al Pacino", "James Caan", "Richard S. Castellano", "Robert Duvall"), "Crime")
+        List<Movie> movieList = Arrays.asList(
+                new Movie(1L, "Titanic", "TEST A seventeen-year-old aristocrat falls in love with a kind but poor artist aboard the luxurious, ill-fated R.M.S. Titanic.", 1997, 5, List.of(new Director(1L, "James", "Cameron")), Arrays.asList(new Actor(1L, "Leonardo", "DiCaprio"), new Actor(2L, "Kate", "Winslet"), new Actor(3L, "Billy", "Zane"), new Actor(4L, "Kathy", "Bates"), new Actor(5L, "Frances", "Fisher")), List.of(new Genre(1L, "Drama")), Instant.now(), Instant.now()),
+                new Movie(2L, "The Shawshank Redemption", "Over the course of several years, two convicts form a friendship, seeking consolation and, eventually, redemption through basic compassion.", 1994, 4, List.of(new Director(2L, "Frank", "Darabont")), Arrays.asList(new Actor(6L, "Tim", "Robbins"), new Actor(7L, "Morgan", "Freeman"), new Actor(8L, "Bob", "Gunton"), new Actor(9L, "William", "Sandler"), new Actor(10L, "Clancy", "Brown")), List.of(new Genre(1L, "Drama")), Instant.now(), Instant.now()),
+                new Movie(3L, "The Godfather", "Don Vito Corleone, head of a mafia family, decides to hand over his empire to his youngest son Michael. However, his decision unintentionally puts the lives of his loved ones in grave danger.", 1972, 3, List.of(new Director(3L, "Francis", "Coppola")), Arrays.asList(new Actor(11L, "Marlon", "Brando"), new Actor(12L, "Al", "Pacino"), new Actor(13L, "James", "Caan"), new Actor(14L, "Richard", "Castellano"), new Actor(15L, "Robert", "Duvall")), List.of(new Genre(3L, "Crime")), Instant.now(), Instant.now())
         );
 
         //when
-        when(movieService.findMovieById(1L)).thenReturn(movieDtoList.get(0));
+        when(movieService.findMovieById(1L)).thenReturn(movieMapper.movieToMovieDto(movieList.get(0)));
 
         mockMvc.perform(get("/movies/1"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.title").value("Titanic"))
-                .andExpect(jsonPath("$.year").value(1997));
+                .andExpect(jsonPath("$.producedYear").value(1997));
     }
 
     @Test
     void updateMovie() throws Exception {
         //given
-        List<MovieDto> movieDtoList = new ArrayList<>(Arrays.asList(
-                new MovieDto(1L, "Titanic", "A seventeen-year-old aristocrat falls in love with a kind but poor artist aboard the luxurious, ill-fated R.M.S. Titanic.", 1997, 5, "James Cameron", List.of("Leonardo DiCaprio", "Kate Winslet", "Billy Zane", "Kathy Bates", "Frances Fisher"), "Drama"),
-                new MovieDto(2L, "The Shawshank Redemption", "Over the course of several years, two convicts form a friendship, seeking consolation and, eventually, redemption through basic compassion.", 1994, 4, "Frank Darabont", List.of("Tim Robbins", "Morgan Freeman", "Bob Gunton", "William Sandler", "Clancy Brown"), "Drama"),
-                new MovieDto(3L, "The Godfather", "Don Vito Corleone, head of a mafia family, decides to hand over his empire to his youngest son Michael. However, his decision unintentionally puts the lives of his loved ones in grave danger.", 1972, 3, "Francis Ford Coppola", List.of("Marlon Brando", "Al Pacino", "James Caan", "Richard S. Castellano", "Robert Duvall"), "Crime")
-        ));
+        List<Movie> movieList = Arrays.asList(
+                new Movie(1L, "Titanic", "TEST A seventeen-year-old aristocrat falls in love with a kind but poor artist aboard the luxurious, ill-fated R.M.S. Titanic.", 1997, 5, List.of(new Director(1L, "James", "Cameron")), Arrays.asList(new Actor(1L, "Leonardo", "DiCaprio"), new Actor(2L, "Kate", "Winslet"), new Actor(3L, "Billy", "Zane"), new Actor(4L, "Kathy", "Bates"), new Actor(5L, "Frances", "Fisher")), List.of(new Genre(1L, "Drama")), Instant.now(), Instant.now()),
+                new Movie(2L, "The Shawshank Redemption", "Over the course of several years, two convicts form a friendship, seeking consolation and, eventually, redemption through basic compassion.", 1994, 4, List.of(new Director(2L, "Frank", "Darabont")), Arrays.asList(new Actor(6L, "Tim", "Robbins"), new Actor(7L, "Morgan", "Freeman"), new Actor(8L, "Bob", "Gunton"), new Actor(9L, "William", "Sandler"), new Actor(10L, "Clancy", "Brown")), List.of(new Genre(1L, "Drama")), Instant.now(), Instant.now()),
+                new Movie(3L, "The Godfather", "Don Vito Corleone, head of a mafia family, decides to hand over his empire to his youngest son Michael. However, his decision unintentionally puts the lives of his loved ones in grave danger.", 1972, 3, List.of(new Director(3L, "Francis", "Coppola")), Arrays.asList(new Actor(11L, "Marlon", "Brando"), new Actor(12L, "Al", "Pacino"), new Actor(13L, "James", "Caan"), new Actor(14L, "Richard", "Castellano"), new Actor(15L, "Robert", "Duvall")), List.of(new Genre(3L, "Crime")), Instant.now(), Instant.now())
+        );
 
         //when
         //then
@@ -133,11 +143,11 @@ class MovieControllerTest {
                 .id(1L)
                 .title("Titanic")
                 .description("Batman")
-                .year(1997)
+                .producedYear(1997)
                 .rate(3)
-                .director("James Cameron")
-                .mainActors(List.of("Leonardo DiCaprio", "Kate Winslet", "Billy Zane", "Kathy Bates", "Frances Fisher"))
-                .genre("Horror")
+                .director(List.of(new Director(1L, "James", "Cameron")))
+                .mainActors(Arrays.asList(new Actor(1L, "Leonardo", "DiCaprio"), new Actor(2L, "Kate", "Winslet"), new Actor(3L, "Billy", "Zane"), new Actor(4L, "Kathy", "Bates"), new Actor(5L, "Frances", "Fisher")))
+                .genres(List.of(new Genre(1L, "Drama")))
                 .build();
         String inputJson = objectMapper.writeValueAsString(updateMovieDto);
 
@@ -154,29 +164,29 @@ class MovieControllerTest {
     @Test
     void updateFullMovie() throws Exception {
         //given
-        List<MovieDto> movieDtoList = new ArrayList<>(Arrays.asList(
-                new MovieDto(1L, "Titanic", "A seventeen-year-old aristocrat falls in love with a kind but poor artist aboard the luxurious, ill-fated R.M.S. Titanic.", 1997, 5, "James Cameron", List.of("Leonardo DiCaprio", "Kate Winslet", "Billy Zane", "Kathy Bates", "Frances Fisher"), "Drama"),
-                new MovieDto(2L, "The Shawshank Redemption", "Over the course of several years, two convicts form a friendship, seeking consolation and, eventually, redemption through basic compassion.", 1994, 4, "Frank Darabont", List.of("Tim Robbins", "Morgan Freeman", "Bob Gunton", "William Sandler", "Clancy Brown"), "Drama"),
-                new MovieDto(3L, "The Godfather", "Don Vito Corleone, head of a mafia family, decides to hand over his empire to his youngest son Michael. However, his decision unintentionally puts the lives of his loved ones in grave danger.", 1972, 3, "Francis Ford Coppola", List.of("Marlon Brando", "Al Pacino", "James Caan", "Richard S. Castellano", "Robert Duvall"), "Crime")
-        ));
+        List<Movie> movieList = Arrays.asList(
+                new Movie(1L, "Titanic", "TEST A seventeen-year-old aristocrat falls in love with a kind but poor artist aboard the luxurious, ill-fated R.M.S. Titanic.", 1997, 5, List.of(new Director(1L, "James", "Cameron")), Arrays.asList(new Actor(1L, "Leonardo", "DiCaprio"), new Actor(2L, "Kate", "Winslet"), new Actor(3L, "Billy", "Zane"), new Actor(4L, "Kathy", "Bates"), new Actor(5L, "Frances", "Fisher")), List.of(new Genre(1L, "Drama")), Instant.now(), Instant.now()),
+                new Movie(2L, "The Shawshank Redemption", "Over the course of several years, two convicts form a friendship, seeking consolation and, eventually, redemption through basic compassion.", 1994, 4, List.of(new Director(2L, "Frank", "Darabont")), Arrays.asList(new Actor(6L, "Tim", "Robbins"), new Actor(7L, "Morgan", "Freeman"), new Actor(8L, "Bob", "Gunton"), new Actor(9L, "William", "Sandler"), new Actor(10L, "Clancy", "Brown")), List.of(new Genre(1L, "Drama")), Instant.now(), Instant.now()),
+                new Movie(3L, "The Godfather", "Don Vito Corleone, head of a mafia family, decides to hand over his empire to his youngest son Michael. However, his decision unintentionally puts the lives of his loved ones in grave danger.", 1972, 3, List.of(new Director(3L, "Francis", "Coppola")), Arrays.asList(new Actor(11L, "Marlon", "Brando"), new Actor(12L, "Al", "Pacino"), new Actor(13L, "James", "Caan"), new Actor(14L, "Richard", "Castellano"), new Actor(15L, "Robert", "Duvall")), List.of(new Genre(3L, "Crime")), Instant.now(), Instant.now())
+        );
 
         //when
         //then
         UpdateMovieDto updateMovieDto = UpdateMovieDto.builder()
                 .description("Batman")
                 .rate(3)
-                .genre("Horror")
+                .genres(List.of(new Genre(3L, "Crime")))
                 .build();
 
         MovieDto movieDto = MovieDto.builder()
                 .id(1L)
                 .title("Titanic")
                 .description("Batman")
-                .year(1997)
+                .producedYear(1997)
                 .rate(3)
-                .director("James Cameron")
-                .mainActors(List.of("Leonardo DiCaprio", "Kate Winslet", "Billy Zane", "Kathy Bates", "Frances Fisher"))
-                .genre("Horror")
+                .director(List.of(new Director(1L, "James", "Cameron")))
+                .mainActors(Arrays.asList(new Actor(1L, "Leonardo", "DiCaprio"), new Actor(2L, "Kate", "Winslet"), new Actor(3L, "Billy", "Zane"), new Actor(4L, "Kathy", "Bates"), new Actor(5L, "Frances", "Fisher")))
+                .genres(List.of(new Genre(3L, "Crime")))
                 .build();
         String inputJson = objectMapper.writeValueAsString(updateMovieDto);
 
@@ -187,7 +197,6 @@ class MovieControllerTest {
                         .content(inputJson))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.description").value("Batman"))
-//                .andExpect(jsonPath("$.rate").value(3))
-                .andExpect(jsonPath("$.genre").value("Horror"));
+                .andExpect(jsonPath("$.genres[0].name").value("Crime"));
     }
 }
